# neubit_core_psim

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/audit/: admin.py  urls.py
apps/authentication/: admin.py  backends.py  models.py  serializers.py  services.py  urls.py  views.py  viewsets.py
apps/authentication/services/: JWTService.py  PermissionService.py  ServiceAuthenticationService.py  __init__.py
apps/locations/: admin.py  urls.py
apps/shared/: __init__.py  apps.py  exception.py  exceptions.py  pagination.py  tasks.py
apps/shared/health/: BaseHealthCheck.py  CacheHealthCheck.py  CeleryHealthCheck.py  DatabaseHealthCheck.py  ServiceHealthManager.py  SystemResourcesHealthCheck.py
apps/shared/management/commands/: create_dev_superuser.py  kong_registration.py  wait_for_db.py
apps/shared/middleware/: APIVersioningMiddleware.py  PerformanceLoggingMiddleware.py  RateLimitingMiddleware.py  RequestCorrelationMiddleware.py  RequestLoggingMiddleware.py  SecurityHeadersMiddleware.py  ServiceAuthenticationMiddleware.py  __init__.py
apps/shared/services/: CacheService.py  HTTPClientService.py  KongIntegrationService.py  NotificationService.py  ServiceDiscoveryService.py
apps/shared/urls/: health.py
apps/shared/views/: health.py
apps/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
core/: asgi.py  celery.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  development.py  production.py  testing.py
infrastructure/docker/core/: Dockerfile.dev
